tests/paczka2/big_fuzzy/69692373.err
Error in line 8: LDwLyglIS S76 95,0
Error in line 10: LDwLyglIS A469 90,7
Error in line 23: Gwc A469 145,5
Error in line 43: 3abKdK A2 54,2
Error in line 48: 0wkHi S126 84,0
Error in line 60: A469 S76 47,6
Error in line 59: 0wkHi S76 53,7
Error in line 88: }wkHi S126 61,1
Error in line 87: A469 S126 76,9
Error in line 89: A469 A469 70,4
Error in line 98: 3abKdK A2 38,5
Error in line 101: 3abKdK S126 65,1
Error in line 102: 3abKdK A2 45,0
Error in line 107: Gwc S76 35,52
Error in line 114: LDwLyglIS S76 309,6
Error in line 115: LDwLyglIS A469 97,4
Error in line 119: LDwLyglIS A2 46,4
Error in line 122: 0bVneBp S76 10,2
Error in line 104: 3abKdK A469 32,9
Error in line 135: ASS A2 99,3
Error in line 140: A469 A469 47,0
Error in line 139: ASS A469 95,0
Error in line 150: ASS S126 6,3
Error in line 156: 0wkHi A469 63,6
Error in line 169: LDwLyglIS A2 55,4
Error in line 167: 3abKdK S76 200,3
Error in line 190: ASS S76 14,9
Error in line 192: 3abKdK A2 83,5
Error in line 193: ASS A2 93,1
Error in line 194: A469 A2 78,5
Error in line 208: LDwLyglIS A469 48,63
Error in line 210: LDwLyglIS S126 18,5
Error in line 220: LDwLyglIS A2 -2,4
Error in line 215: 0wkHi A2 20,4
Error in line 209: Gwc A469 55,2
Error in line 226: 0bVneBp A2 26,6
Error in line 229: 0wkHi A469 87,1
Error in line 232: ASS S?6 45,3
Error in line 231: 0wkHi S126 91,8
Error in line 235: 0wkHi A2 94,1
Error in line 233: ASS A469 73,6
Error in line 245: Gwc S76 67,1
